collects/tests/typed-racket/fail/pr13218.rkt
#lang typed/racket

(: sum ((Listof Flonum) -> Flonum))
(define (sum ws) (apply + ws))

(ann (sum '()) Flonum)
